Update java build file